update package references

--- a/Thandizo.DHIS.ClientWorker/Thandizo.DHIS.ClientWorker.csproj
+++ b/Thandizo.DHIS.ClientWorker/Thandizo.DHIS.ClientWorker.csproj
@@ -5,4 +5,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MassTransit.Autofac" Version="6.2.5" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="6.2.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Thandizo.DHIS.BLL\Thandizo.DHIS.BLL.csproj" />
+  </ItemGroup>
+
 </Project>
