--- a/Thandizo.DHIS.ClientWorker/Thandizo.DHIS.ClientWorker.csproj
+++ b/Thandizo.DHIS.ClientWorker/Thandizo.DHIS.ClientWorker.csproj
@@ -8,6 +8,11 @@
   <ItemGroup>
     <PackageReference Include="MassTransit.Autofac" Version="6.2.5" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="6.2.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.3" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
+    <PackageReference Include="Serilog.Sinks.ColoredConsole" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
