added DhisClientUserId and DhisClientPassword configuration items in appsettings.json

--- a/Thandizo.DHIS.ClientWorker/appsettings.json
+++ b/Thandizo.DHIS.ClientWorker/appsettings.json
@@ -4,7 +4,9 @@
   "RabbitMQPassword": "guest",
   "DhisQueue": "dhis_service",
   "DhisApiUrl": "http://test.url.com",
+  "DhisClientUserId": "testuser",
+  "DhisClientPassword": "password123",
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=localhost;Port=5432;Database=thandizo;User Id=1111dba;Password=2013+;Pooling=true;CommandTimeout=60;Timeout=60;"
+    "DatabaseConnection": "Server=localhost;Port=5432;Database=thandizo;User Id=thandizo_dba;Password=admin2013+;Pooling=true;CommandTimeout=60;Timeout=60;"
   }
 }
