--- a/Thandizo.DHIS.BLL/Thandizo.DHIS.BLL.csproj
+++ b/Thandizo.DHIS.BLL/Thandizo.DHIS.BLL.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AngleDimension.Standard.Http" Version="1.1.6.4" />
+    <PackageReference Include="NETCore.Encrypt" Version="2.0.8" />
     <PackageReference Include="Thandizo.DAL" Version="1.0.1.5" />
     <PackageReference Include="Thandizo.DataModels" Version="1.0.5" />
   </ItemGroup>
