added configurations in Program.cs and appsettings.json for new queue thus DhisDailySymptomsQueue

--- a/Thandizo.DHIS.ClientWorker/appsettings.json
+++ b/Thandizo.DHIS.ClientWorker/appsettings.json
@@ -3,10 +3,11 @@
   "RabbitMQUsername": "guest",
   "RabbitMQPassword": "guest",
   "DhisQueue": "dhis_service",
-  "DhisApiUrl": "http://test.url.com",
-  "DhisClientUserId": "testuser",
-  "DhisClientPassword": "password123",
+  "DhisDailySymptomsQueue": "dhis_daily_symptoms_service",
+  "DhisApiUrl": "some api",
+  "DhisClientUserId": "user",
+  "DhisClientPassword": "pwd-here",
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=localhost;Port=5432;Database=thandizo;User Id=thandizo_dba;Password=admin2013+;Pooling=true;CommandTimeout=60;Timeout=60;"
+    "DatabaseConnection": "Server=localhost;Port=5432;Database=DDDD;User Id=DSUS;Password=33333+;Pooling=true;CommandTimeout=60;Timeout=60;"
   }
 }
